syntax = "proto3";

package com.example.grpc;

option java_multiple_files = true;
option java_package = "com.example.grpc";
option java_outer_classname = "TrendingProto";

service TrendingMoviesService {
  rpc GetTrendingMovies (TrendingRequest) returns (TrendingResponse) {
  }
}

service TopMoviesService {
  rpc GetTopMovieIds (TrendingRequest) returns (MovieIds) {
  }
}

service MoviesInfoService {
  rpc GetMoviesInfo (MovieIds) returns (TrendingResponse) {
  }
}

message Movie {
  string name = 1;
  string description = 2;
  int32 movieId = 3;
}

message MovieIds {
  repeated int32 id = 1;
}

message TrendingRequest {
}

message TrendingResponse {
  repeated Movie movies = 1;
}
